# finance_blog

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  .prettierignore  .vercelignore  AGENTS.md  ARCHITECTURE.md  README.md  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
api/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  index.py  pyproject.toml  requirements.txt
api/app/: __init__.py  auth.py  errors.py  main.py  settings.py
api/app/jobs/: ingest_13f.py  ingest_finnhub.py  refresh_kr_daily.py  refresh_us_daily.py
api/app/models/: dashboard.py  errors.py  masters.py  portfolios.py  quotes.py  reports.py  watchlists.py
api/app/repos/: masters.py  portfolios.py  prices.py  reports.py  watchlists.py
api/app/routes/: cron.py  dashboard.py  events.py  macros.py  market.py  masters.py  movers.py  news.py  portfolios.py  quotes.py  reports.py  sentiment.py  stocks_extra.py  todos.py  watchlists.py
api/app/sources/: alphavantage.py  cnn.py  dart.py  ecos.py  finnhub.py  fred.py  krx.py  polygon.py  sec.py
api/app/tests/: auth_helpers.py  conftest.py  test_dashboard_example.py  test_health.py  test_portfolios.py  test_quotes.py  test_watchlists.py
design/: .design-canvas.state.json  STOCKLAB Wireframes v3.html
docs/: API.md  DEPLOYMENT.md  DESIGN.md  ENV.md  FRONTEND-MAP.md  FRONTEND.md  MCP-ROUTING.md  PLANS.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: auth.md  (+8 more)
scripts/: backfill_us_ytd.py  init.sh
supabase/: README.md  config.toml
web/: AGENTS.md  README.md  index.html  package-lock.json  package.json
(+216 files in other folders)
